fail_crate/tests/multiple_main_new.rs
use inew::New;

#[derive(New)]
#[new(pub)]
#[new(pub)]
struct A;

fn main() {}
